--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.menuTypo{
+  width: auto;
+  height: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
